--- a/style..css
+++ b/style..css
@@ -96,7 +96,9 @@ button:hover {
 #FindHighRatingProduct,
 #FindFormateProductVariation,
 #FindTheTotalStockProduct,
-#FindTheProductQuantity
+#FindTheProductQuantityGreaterThanFive,
+#FindTotalSummaryOfEachProduct,
+#FindTheHighestTotalStockProductIdentification
 {
     margin: 20px auto;
     padding: 20px;
